updated some pages

--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
     <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
     <div class="d-flex align-items-start justify-content-between">
-      <img id="cover" class="mx-auto d-none d-lg-block" src="images/logos/pathvisio-book-logo.png" width="100px">
+      <a href="./"></a><img id="cover" class="mx-auto d-none d-lg-block" src="images/logos/pathvisio-book-logo.png" width="145px"></a>
       <h1 class="d-lg-none">
         <a href="index.html" title="$subtitle$">$title$</a>$if(subtitle)$:
         <small class="text-muted">$subtitle$</small>$endif$
