update to add link to homepage

--- a/template.html
+++ b/template.html
@@ -52,13 +52,16 @@
     <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
     <div class="d-flex align-items-start justify-content-between">
-      <a href="./"></a><img id="cover" class="mx-auto d-none d-lg-block" src="images/logos/pathvisio-book-logo.png" width="145px"></a>
+      <a href="https://pathvisio.org/pathvisio-book/"><img id="cover" class="mx-auto d-none d-lg-block" src="images/logos/pathvisio-book-logo.png" width="145px"></a>
       <h1 class="d-lg-none">
         <a href="index.html" title="$subtitle$">$title$</a>$if(subtitle)$:
         <small class="text-muted">$subtitle$</small>$endif$
       </h1>
       <button class="btn btn-outline-primary d-lg-none ml-2 mt-1" type="button" data-toggle="collapse" data-target="#main-nav" aria-expanded="true" aria-controls="main-nav"><i class="fas fa-bars"></i><span class="sr-only">Show table of contents</span></button>
     </div>
+
+    <a href="https://pathvisio.org/">PathVisio Homepage &#x1F3E0;</a>
+    <br>
 
     <div id="main-nav" class="collapse-lg">
       <form role="search">
@@ -68,7 +71,6 @@
       <nav aria-label="Table of contents">
         <h2>Table of contents</h2>
         <div id="book-toc"></div>
-
         <div class="book-extra">
           <p><a id="book-repo" href="#">View book source <i class="fab fa-github"></i></a></li></p>
         </div>
