--- a/template.html
+++ b/template.html
@@ -60,7 +60,7 @@
       <button class="btn btn-outline-primary d-lg-none ml-2 mt-1" type="button" data-toggle="collapse" data-target="#main-nav" aria-expanded="true" aria-controls="main-nav"><i class="fas fa-bars"></i><span class="sr-only">Show table of contents</span></button>
     </div>
 
-    <a href="https://pathvisio.org/">PathVisio Homepage &#x1F3E0;</a>
+    <a href="https://pathvisio.org/">PathVisio Home &#x1F3E0;</a>
     <br>
 
     <div id="main-nav" class="collapse-lg">
